Version 2.03.12 - 
===================================
  Support online rename of VDO pools.
  Imporove removal of pmspare when last pool is removed.
  Fix problem with wiping of converted LVs.
  Fix memleak in scanning  (2.03.11).
  Fix corner case allocation for thin-pools.

Version 2.03.11 - 08th January 2021
===================================
  Fix pvck handling MDA at offset different from 4096.
  Partial or degraded activation of writecache is not allowed.
  Enhance error handling for fsadm and hanled correct fsck result.
  Dmeventd lvm plugin ignores higher reserved_stack lvm.conf values.
  Support using BLKZEROOUT for clearing devices.
  Support interruption when wipping LVs.
  Support interruption for bcache waiting.
  Fix bcache when device has too many failing writes.
  Fix bcache waiting for IO completion with failing disks.
  Configure use own python path name order to prefer using python3.
  Add configure --enable-editline support as an alternative to readline.
  Enhance reporting and error handling when creating thin volumes.
  Enable vgsplit for VDO volumes.
  Lvextend of vdo pool volumes ensure at least 1 new VDO slab is added.
  Use revert_lv() on reload error path after vg_revert().
  Configure --with-integrity enabled.
  Restore lost signal blocking while VG lock is held.
  Improve estimation of needed extents when creating thin-pool.
  Use extra 1% when resizing thin-pool metadata LV with --use-policy.
  Enhance --use-policy percentage rounding.
  Configure --with-vdo and --with-writecache as internal segments.
  Improving VDO man page examples.
  Allow pvmove of writecache origin.
  Report integrity fields.
  Integrity volumes defaults to journal mode.
  Switch code base to use flexible array syntax.
  Fix 64bit math when calculation cachevol size.
  Preserve uint32_t for seqno handling.
  Switch from mmap to plain read when loading regular files.
  Update lvmvdo man page and better explain DISCARD usage.

Version 2.03.10 - 09th August 2020